@@ -35,6 +35,8 @@ http \- Client-side implementation of the HTTP/1.0 protocol.
 .sp
 \fB::http::ncode \fItoken\fR
 .sp
+\fB::http::meta \fItoken\fR
+.sp
 \fB::http::data \fItoken\fR
 .sp
 \fB::http::error \fItoken\fR
@@ -309,6 +311,11 @@ code (200, 404, etc.) from the \fBhttp\fP element of the state array.
 This is a convenience procedure that returns the \fBcurrentsize\fP
 element of the state array, which represents the number of bytes
 received from the URL in the \fB::http::geturl\fP call.
+.TP
+\fB::http::meta\fP \fItoken\fP
+This is a convenience procedure that returns the \fBmeta\fP
+element of the state array which contains the HTTP response
+headers. See below for an explanation of this element.
 .TP
 \fB::http::cleanup\fP \fItoken\fP
 This procedure cleans up the state associated with the connection
